--- a/car-tool-app/src/app/car-tool/components/car-form/car-form.component.html
+++ b/car-tool-app/src/app/car-tool/components/car-form/car-form.component.html
@@ -1,26 +1,36 @@
 <header>
   <h2>{{headerText}}</h2>
 </header>
-<form [formGroup]="carForm">
-  <div>
+<form [formGroup]="carForm" (submit)="doSubmitCarForm()">
+  <div class="form-group">
     <label for="make-input">Make:</label>
-    <input type="text" id="make-input" formControlName="make">
+    <input type="text" class="form-control" #makeInput
+      id="make-input" formControlName="make">
   </div>
-  <div>
+  <div class="form-group">
     <label for="model-input">Model:</label>
-    <input type="text" id="model-input" formControlName="model">
+    <input type="text" class="form-control"
+      id="model-input" formControlName="model">
   </div>
-  <div>
+  <div class="form-group">
     <label for="year-input">Year:</label>
-    <input type="number" id="year-input" formControlName="year">
+    <input type="number" class="form-control"
+      id="year-input" formControlName="year">
   </div>
-  <div>
+  <div class="form-group">
     <label for="color-input">Color:</label>
-    <input type="text" id="color-input" formControlName="color">
+    <input type="text" class="form-control"
+      id="color-input" formControlName="color">
   </div>
-  <div>
+  <div class="form-group">
     <label for="price-input">Price:</label>
-    <input type="number" id="price-input" formControlName="price">
+    <input type="number" class="form-control"
+      id="price-input" formControlName="price">
   </div>
-  <button (click)="doSubmitCar()">{{buttonText}}</button>
+  <div class="text-center">
+      <button type="submit" class="btn btn-primary">
+        {{buttonText}}</button>
+      <button type="button" (click)="doResetCarForm()"
+        class="btn btn-secondary">Reset</button>
+  </div>
 </form>
