--- a/car-tool-app/src/app/car-tool/components/car-edit-row/car-edit-row.component.html
+++ b/car-tool-app/src/app/car-tool/components/car-edit-row/car-edit-row.component.html
@@ -1,12 +1,17 @@
 <ng-container [formGroup]="editCarForm">
-    <td>{{car.id}}</td>
-    <td><input type="text" formControlName="make"></td>
-    <td><input type="text" formControlName="model"></td>
-    <td><input type="number" formControlName="year"></td>
-    <td><input type="text" formControlName="color"></td>
-    <td><input type="number" formControlName="price"></td>
-    <td>
-      <button (click)="doSaveCar()">Save</button>
-      <button (click)="doCancelCar()">Cancel</button>
-    </td>
-  </ng-container>
+  <td>{{car.id}}</td>
+  <td><input type="text" class="form-control" #editMakeInput
+    id="edit-make-input" formControlName="make"></td>
+  <td><input type="text" class="form-control"
+    id="edit-model-input" formControlName="model"></td>
+  <td><input type="number" class="form-control"
+    id="edit-year-input" formControlName="year"></td>
+  <td><input type="text" class="form-control"
+    id="edit-color-input" formControlName="color"></td>
+  <td><input type="number" class="form-control"
+    id="edit-price-input" formControlName="price"></td>
+  <td>
+    <button (click)="doSaveCar()" class="btn btn-link">Save</button>
+    <button (click)="doCancelCar()" class="btn btn-link">Cancel</button>
+  </td>
+</ng-container>
