--- a/car-tool-app/src/app/car-tool/components/car-home/car-home.component.css
+++ b/car-tool-app/src/app/car-tool/components/car-home/car-home.component.css
@@ -6,7 +6,7 @@
 
   display: grid;
   grid-template-rows: 5rem auto 40px;
-  grid-template-columns: 60% 40%;
+  grid-template-columns: 70% 30%;
   grid-template-areas: 
     "header header"
     "left-content right-content"
@@ -21,10 +21,16 @@ app-tool-footer {
   grid-area: footer;
 }
 
+app-car-table, app-car-form {
+  padding: 20px;
+}
+
 app-car-table {
   grid-area: left-content;
+  overflow: scroll;
 }
 
 app-car-form {
   grid-area: right-content;
+  overflow: scroll;
 }
