--- a/car-tool-app/src/app/car-tool/components/car-view-row/car-view-row.component.html
+++ b/car-tool-app/src/app/car-tool/components/car-view-row/car-view-row.component.html
@@ -1,10 +1,10 @@
-<td>{{car.id}}</td>
-<td>{{car.make}}</td>
-<td>{{car.model}}</td>
-<td>{{car.year}}</td>
-<td>{{car.color}}</td>
-<td>{{car.price}}</td>
-<td>
-  <button (click)="doEditCar()">Edit</button>
-  <button (click)="doDeleteCar()">Delete</button>
+<td class="text-right">{{car.id}}</td>
+<td class="text-left">{{car.make}}</td>
+<td class="text-left">{{car.model}}</td>
+<td class="text-center">{{car.year}}</td>
+<td class="text-center">{{car.color}}</td>
+<td class="text-right">{{car.price | currency}}</td>
+<td class="text-center">
+  <button (click)="doEditCar()" class="btn btn-link">Edit</button>
+  <button (click)="doDeleteCar()" class="btn btn-link">Delete</button>
 </td>
