--- a/car-tool-app/src/app/car-tool/components/car-home/car-home.component.html
+++ b/car-tool-app/src/app/car-tool/components/car-home/car-home.component.html
@@ -6,3 +6,5 @@
 <app-car-form headerText="Add Car Form" buttonText="Add Car"
   (submitCar)="doAppendCar($event)"></app-car-form>
 <app-tool-footer organizationName="A Cool Car Company, Inc."></app-tool-footer>
+
+<app-notification></app-notification>
