--- a/car-tool-app/src/app/shared/components/tool-header/tool-header.component.css
+++ b/car-tool-app/src/app/shared/components/tool-header/tool-header.component.css
@@ -2,8 +2,13 @@
   background-color: navy;
   color: white;
   padding: 5px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
-footer > h1 {
-  font-size: 1.5rem;
+header > h1 {
+  font-size: 3rem;
+  padding: 0;
+  margin: 0;
 }
