--- a/car-tool-app/src/app/shared/components/tool-footer/tool-footer.component.html
+++ b/car-tool-app/src/app/shared/components/tool-footer/tool-footer.component.html
@@ -1,8 +1,8 @@
 <footer>
   <small>
     <span>{{copyrightYear}} {{organizationName}}</span>
-    <a [href]="privacyPolicyUrl" *ngIf="privacyPolicyUrl">Privacy Policy</a>
-    <a [href]="termsOfUseUrl" *ngIf="termsOfUseUrl">Terms Of Use</a>
+    <a id="privacy-policy-link" [href]="privacyPolicyUrl" *ngIf="privacyPolicyUrl">Privacy Policy</a>
+    <a id="terms-of-use-link" [href]="termsOfUseUrl" *ngIf="termsOfUseUrl">Terms Of Use</a>
   </small>
 </footer>
 
